<resources>
    <!-- Meta Labels -->
    <string name="app_name">FindMeeting</string>

    <string name="title_activity_new_ob_av__page">NewObAv_Page</string>
    <string name="title_activity_availability_page">AvailabilityPage</string>
    <string name="title_activity_saved_people">SavedPeople</string>
    <string name="title_activity_summary">Meeting Summary</string>
    <string name="title_activity_involved_people">People Involved</string>
    <string name="title_activity_availability">Summary of Availability</string>
    <string name="title_activity_new_oblig_avail">Find Meeting</string>
    <string name="title_activity_results">Results</string>
    <string name="title_activity_summary_pane">SummaryPane</string>
    <string name="title_activity_people_pane">people_pane</string>
    <string name="title_activity_results_page">ResultsPage</string>

    <!-- Activity Titles -->
    <string name="summaryTitle_2">Meeting Summary</string>
    <string name="availabilityTitle_5">Availability - </string>
    <string name="peopleTitle_3">People</string>



    <!-- Days of the Week -->
    <string name="mondayLabel_1">M</string>
    <string name="sundayLabel_1">Su</string>
    <string name="tuesdayLabel_1">T</string>
    <string name="wednesdayLabel_1">W</string>
    <string name="thursdayLabel_1">Th</string>
    <string name="fridayLabel_1">F</string>
    <string name="saturdayLabel_1">S</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <!-- Generic Terms -->
    <string name="obligation">Obligation - </string>
    <string name="availability">Availability - </string>
    <string name="next">Next</string>
    <string name="addTitle_6">Add</string>
    <string name="saveText_5">DONE</string>
    <string name="set_1">Set</string>
    <string name="create">CREATE</string>
    <string name="cancel">CANCEL</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="days">Days:</string>
    <string name="avail">Availability</string>
    <string name="ablig">Obligation</string>

    <!-- ParamEntry Activity -->
    <string name="stored_1">Stored</string>
    <string name="invalidInterval_1">Invalid Time Range.</string>
    <string name="action_settings">Settings</string>
    <string name="meetingInfoTitle_1">Meeting Information</string>
    <string name="meetingDaysLabel_1">Working Days:</string>
    <string name="daysDescription_1">Input the meeting\'s available possibleDays</string>
    <string name="timeRangeLabel_1">Time Range:</string>
    <string name="fromLabel_1">From:</string>
    <string name="toLabel_1">to</string>
    <string name="meetingLengthLabel_1">Meeting Length:</string>

    <!-- Summary Activity -->
    <string name="lengthLabel_2">Meeting Length:</string>
    <string name="timeLabel_2">Time</string>

    <!-- Involved People Activity -->
    <string name="calcAvailability_3">Find Meeting Times</string>

    <!-- Saved People Activity -->
    <string name="savedPeople_4">Saved People</string>

    <!-- Availability Summary Activity -->
    <string name="availButtonText_5">New Availability</string>
    <string name="newObligation_5">New Obligation</string>
    <string name="changeItem">ChangeItem</string>

    <!-- Results Activity -->
    <string name="possibleMeetings">Possible Meetings</string>
    <string name="all_selected_days">All Selected Days</string>

    <!-- Toasts -->
    <string name="person_exists">Person already exists.</string>
    <string name="person_added">Person has been added to meeting.</string>
    <string name="person_already_added">Person already in meeting.</string>
    <string name="invalidConfig">Invalid Meeting Configuration</string>
    <string name="invalidRange">Invalid Time Range</string>
    <string name="moreObligations">Enter at least one obligation for each person.</string>
    <string name="morePeople">Add some people.</string>
    <string name="newItem">New Schedule Item</string>
    <string name="selectDay">Please select a day.</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>

</resources>
