<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.bk.fm.FindMeeting.NewObligAvail">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_above="@+id/saveButton"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/newItem"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleButton"
            android:checked="false"
            android:textOff="@string/avail"
            android:textOn="@string/ablig"
            android:layout_gravity="center_horizontal"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.13"/>

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:contentDescription="@string/daysDescription_1"
            android:stretchColumns="@string/daysDescription_1"
            android:useDefaultMargins="false">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <CheckBox
                    android:id="@+id/sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="4"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="5"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="6"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/textView210"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/sundayLabel_1"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/mondayLabel_1"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/tuesdayLabel_1"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/wednesdayLabel_1"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="4"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/thursdayLabel_1"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="5"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/fridayLabel_1"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="6"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/saturdayLabel_1"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
            </TableRow>
        </TableLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.17"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                tools:ignore="HardcodedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/startTime"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="00:00" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toLabel_1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <Button
                tools:ignore="HardcodedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/endTime"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="01:00"
                android:focusableInTouchMode="false" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="0.15"/>

    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/saveText_5"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
