<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.bk.fm.findmeeting.AvailabilitySummary">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/availabilityTitle_5"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/newAvailabilityButton"
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:background="#ff00f000"
                android:text="@string/availButtonText_5"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/saveText_5"
                android:background="#2ad2c9"/>

            <Button
                android:id="@+id/newObligationButton"
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:background="#f00000"
                android:text="@string/newObligation_5"/>
        </LinearLayout>

        <ListView
            android:id="@+id/AvailObligListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</RelativeLayout>
