<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MeetingParams">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/meetingInfoTitle_1"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.22"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/meetingDaysLabel_1"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/daysDescription_1"
            android:stretchColumns="@string/daysDescription_1"
            android:useDefaultMargins="false">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="4"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/checkBox6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="5"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/checkBox7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="6"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/sundayLabel_1"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/mondayLabel_1"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/tuesdayLabel_1"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/wednesdayLabel_1"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="4"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/thursdayLabel_1"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="5"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/fridayLabel_1"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="6"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/saturdayLabel_1"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
            </TableRow>
        </TableLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.22"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeRangeLabel_1"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fromLabel_1"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="time"/>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toLabel_1"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="time"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.22"/>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meetingLengthLabel_1"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:inputType="time"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.18"/>

        <Button
            android:id="@+id/button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.16"
            android:height="20dp"
            android:hint="@string/nextLabel"
            android:text="@string/nextLabel"
            android:textSize="@dimen/abc_text_size_large_material"/>

    </LinearLayout>

</RelativeLayout>
