<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="FM.BK.AvailabilityPage">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/availibilityTitle_5"
            android:id="@+id/textView20"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="80dp">

            <Button
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:text="@string/availButtonText_5"
                android:id="@+id/button6"
                android:background="#ff66a13b"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/saveText_5"
                android:id="@+id/button7"/>

            <Button
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:text="@string/newObligation_5"
                android:id="@+id/button8"
                android:background="#ff8d362d"/>
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listView5"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</RelativeLayout>
